--- a/index.html
+++ b/index.html
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: DevFolio
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -63,7 +55,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="about" class="hero section dark-background">
 
       <img src="assets/img/profile-img.jpg" alt="" data-aos="fade-in">
 
@@ -75,7 +67,7 @@
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section">
+    <section id="resume" class="about section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -219,8 +211,9 @@
             </div><!-- End Info Item -->
 
             <div class="col-lg-4">
-              <div class="info-item d-flex align-items-center">
+              <div class="info-item d-flex align-items-center"><a href="https://wa.me/6285694249714">
                 <i class="bi bi-telephone flex-shrink-0"></i>
+              </a>
                 <div>
                   <h3>Telepon Saya</h3>
                   <p>+62 856-9424-9714</p>
@@ -229,11 +222,12 @@
             </div><!-- End Info Item -->
 
             <div class="col-lg-4">
-              <div class="info-item d-flex align-items-center">
+              <div class="info-item d-flex align-items-center"><a href="https://www.bing.com/maps?q=Medangasem%2C+Karawang%2C+Jawa+Barat&FORM=HDRSC6&cp=-6.127541%7E107.301957&lvl=12.9">
                 <i class="bi bi-envelope flex-shrink-0"></i>
+              </a>
                 <div>
-                  <h3>Email Us</h3>
-                  <p>Studywithkharisma@gmail.com</p>
+                  <h3>Email</h3>
+                  <p>studywithkharisma@gmail.com</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -252,11 +246,6 @@
     <div class="container">
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">DevFolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
